V1.2024.01.08: cambios menores. Preparación de la vista para el caso de uso Adquirir nuevo contrato.